Segunda parte do projeto final

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dress To Impress</title>
-    <link rel="stylesheet" href="estio.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <nav class="barra-navegacao">
+    <div>
         <img src="Logodti.png" height="45px" alt="Logo do Dress To Impress">
         <div class="links">
             <a href="#">HOME</a>
             <a href="#sobre">SOBRE</a>
             <a href="#contato">CONTATO</a>
         </div>
+    </div>
     </nav>
     <main>
         <section id="home" class="home">
@@ -28,10 +30,94 @@
                 <button>Loren</button>
             </div>
             <div>
-                <img src="nydti.jpg" alt dress to impress image>
+                <div class="home__imagem">
+                    <img src="nydti.jpg" height="80px" alt= "dress to impress image">
+                </div>
             </div>
         </section>
-    </main>
-</body>
-
-</html>
+        <section class="sobre">
+            <h2>Lorem Flex</h2>
+            <div>
+              <div class="sobre__card">
+                <p><b>Lorem</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+              <div class="sobre__card">
+                <p><b>Lorem</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+              <div class="sobre__card">
+                <p><b>Lorem</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+              <div class="sobre__card">
+                <p><b>Lorem</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </section>
+          <section>
+            <h2>Lorem Grid</h2>
+            <div>
+              <div>
+                <img src="" alt="" />
+                <p>Lorem Ipsum dolor sit</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
+                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                </p>
+              </div>
+              <div>
+                <img src="" alt="" />
+                <p>Lorem Ipsum dolor sit</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
+                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                </p>
+              </div>
+              <div>
+                <img src="" alt="" />
+                <p>Lorem Ipsum dolor sit</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
+                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                </p>
+              </div>
+              <div>
+                <img src="" alt="" />
+                <p>Lorem Ipsum dolor sit</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
+                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                </p>
+              </div>
+              <div>
+                <img src="" alt="" />
+                <p>Lorem Ipsum dolor sit</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
+                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                </p>
+              </div>
+            </div>
+          </section>
+          <section>
+            <h3>Lorem Ipsum Dolor Sit Amet<br />consectetur adipiscing elit.</h3>
+            <form action="">
+              <input type="text" />
+              <input type="submit" value="Ok" />
+              <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                lobortis dui vel urna sodales, sed iaculis nibh mollis.</small>
+            </form>
+          </section>
+        </main>
+        <footer>
+            <p>Todos direitos reservados à &#xA9; Meu nome aqui</p>
+        </footer>
+      </body>
+    </html>
