--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
               </div>
             </div>
           </section>
-          <section>
+          <section class="grid">
             <h2>Lorem Grid</h2>
             <div>
-              <div>
-                <img src="" alt="" />
+              <div class="grid__item">
+                <img src="floresh.avif/200/230" alt="" />
                 <p>Lorem Ipsum dolor sit</p>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
@@ -68,56 +68,54 @@
                   euismod diam tellus, quis rhoncus nulla suscipit semper.
                 </p>
               </div>
-              <div>
-                <img src="" alt="" />
+              <div class="grid__item">
+                <img src="https://picsum.photos/100/100" alt="" />
                 <p>Lorem Ipsum dolor sit</p>
+                <div>
+                  <p>Lorem Ipsum dolor sit</p>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
                   lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
                   euismod diam tellus, quis rhoncus nulla suscipit semper.
                 </p>
+                </div>
               </div>
-              <div>
-                <img src="" alt="" />
-                <p>Lorem Ipsum dolor sit</p>
+              <div class="grid__item">
+                <img src="https://picsum.photos/100/100" alt="" />
+                <div>
+                  <p>Lorem Ipsum dolor sit</p>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
                   lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
                   euismod diam tellus, quis rhoncus nulla suscipit semper.
                 </p>
+                </div>
               </div>
-              <div>
-                <img src="" alt="" />
-                <p>Lorem Ipsum dolor sit</p>
+              <div class="grid__item">
+                <img src="https://picsum.photos/100/100" alt="" />
+                <div>
+                  <p>Lorem Ipsum dolor sit</p>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
                   lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
                   euismod diam tellus, quis rhoncus nulla suscipit semper.
                 </p>
-              </div>
-              <div>
-                <img src="" alt="" />
-                <p>Lorem Ipsum dolor sit</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
-                  euismod diam tellus, quis rhoncus nulla suscipit semper.
-                </p>
+                </div>
               </div>
             </div>
           </section>
-          <section>
-            <h3>Lorem Ipsum Dolor Sit Amet<br />consectetur adipiscing elit.</h3>
-            <form action="">
-              <input type="text" />
-              <input type="submit" value="Ok" />
-              <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                lobortis dui vel urna sodales, sed iaculis nibh mollis.</small>
-            </form>
-          </section>
         </main>
+        <section class="contato">
+          <h3>Lorem Ipsum Dolor Sit Amet<br />consectetur adipiscing elit.</h3>
+          <form action="">
+            <input type="text" />
+            <input type="submit" value="Ok" />
+            <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+              lobortis dui vel urna sodales, sed iaculis nibh mollis.</small>
+          </form>
+        </section>
         <footer>
-            <p>Todos direitos reservados à &#xA9; Meu nome aqui</p>
+            <p>Todos direitos reservados à &#xA9; Betinha</p>
         </footer>
       </body>
     </html>
