--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dress To Impress</title>
+    <title>BabyMetal</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <nav class="barra-navegacao">
     <div>
-        <img src="Logodti.png" height="45px" alt="Logo do Dress To Impress">
+        <img src="logobm.png" height="45px" alt="Logo da banda BabyMetal">
         <div class="links">
             <a href="#">HOME</a>
             <a href="#sobre">SOBRE</a>
@@ -20,85 +20,76 @@
     <main>
         <section id="home" class="home">
             <div>
-                <h2>Dress To Impress</h2>
+                <h2>BABYMETAL</h2>
                 <p>
-                    Um jogo de vestir criado para plataforma de jogos Roblox, que consistem em vestir o 
-                    personagem em um tempo limitado e depois votar no estilo alheio. O jogo permite usar 
-                    a criatividade para juntar peças e fazer conjuntos únicos. Com diversos evento e roupas 
-                    especiais, o jogo cresce cada vez mais.
+                  BABYMETAL é uma banda japonesa de metal que se destaca pela fusão inusitada de heavy metal com J-pop (pop japonês), criando um estilo próprio chamado kawaii metal – uma mistura entre a agressividade do metal e a estética fofa e energética da cultura idol japonesa. A banda foi formada em 2010 como um subprojeto do grupo idol Sakura Gakuin, mas rapidamente ganhou popularidade global, conquistando fãs tanto no cenário do metal quanto no pop.
                 </p>
-                <button>Loren</button>
+                <button>Metal</button>
             </div>
             <div>
                 <div class="home__imagem">
-                    <img src="nydti.jpg" height="80px" alt= "dress to impress image">
+                    <img src="babymetalhor.jpg" height="80px" alt= "Foto das integrantes do BabyMetal">
                 </div>
             </div>
         </section>
         <section class="sobre">
-            <h2>Lorem Flex</h2>
+            <h2>Integrantes</h2>
             <div>
               <div class="sobre__card">
-                <p><b>Lorem</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p><b>Su-metal (Suzuka Nakamoto)</b></p>
+                <p>Vocalista principal e líder do grupo, responsável pelos vocais potentes e melódicos.</p>
               </div>
               <div class="sobre__card">
-                <p><b>Lorem</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p><b>Moametal (Moa Kikuchi)</b></p>
+                <p>Backing vocal e dançarina.</p>
               </div>
               <div class="sobre__card">
-                <p><b>Lorem</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p><b>Yuimetal (Yui Mizuno)</b></p>
+                <p>Backing vocal e dançarina (deixou a banda em 2018).</p>
               </div>
               <div class="sobre__card">
-                <p><b>Lorem</b></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p><b>Momometal (Momoko Okazaki)</b></p>
+                <p>Backing vocal e dançarina. Antes de ser membro oficial, Momometal já havia participado como uma das Avengers, substituindo Yuimetal em turnês desde 2019.</p>
               </div>
             </div>
           </section>
           <section class="grid">
-            <h2>Lorem Grid</h2>
+            <h2>BABYMETAL</h2>
             <div>
               <div class="grid__item">
                 <img src="floresh.avif/200/230" alt="" />
-                <p>Lorem Ipsum dolor sit</p>
+                <p>DESTAQUE</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
-                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                  O BABYMETAL se destacou não apenas pela originalidade de seu som, mas também pela forma como desafia as convenções do metal, unindo dois mundos aparentemente opostos e conquistando tanto fãs de J-pop quanto headbangers tradicionais.<br>
+                  BABYMETAL desafiou as convenções do metal e do pop, criando um nicho totalmente novo e conquistando respeito tanto entre headbangers quanto no mainstream. Com performances eletrizantes, músicas inovadoras e um conceito único, a banda continua evoluindo e surpreendendo o público global.
                 </p>
               </div>
               <div class="grid__item">
-                <img src="https://picsum.photos/100/100" alt="" />
-                <p>Lorem Ipsum dolor sit</p>
+                <img src="babymetal1.jpg" alt="" />
                 <div>
-                  <p>Lorem Ipsum dolor sit</p>
+                  <p>Estilo Musical e Sonoridade</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
-                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                  O BABYMETAL mistura diversos subgêneros do metal, como power metal (Road of Resistance), death metal/metalcore (Megitsune, BxMxC) e electronic/industrial metal (levator Girl, Karate). Além disso, incorpora elementos do J-pop, como refrões cativantes e coreografias, criando uma estética única.
                 </p>
                 </div>
               </div>
               <div class="grid__item">
-                <img src="https://picsum.photos/100/100" alt="" />
+                <img src="babymetal2.jpg" alt="" />
                 <div>
-                  <p>Lorem Ipsum dolor sit</p>
+                  <p>Impacto e Reconhecimento Internacional</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
-                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                  O BABYMETAL rapidamente se tornou um fenômeno global, especialmente após o lançamento de seu álbum de estreia BABYMETAL (2014). O sucesso continuou com álbuns como Metal Resistance (2016) e Metal Galaxy (2019).
                 </p>
                 </div>
               </div>
               <div class="grid__item">
-                <img src="https://picsum.photos/100/100" alt="" />
+                <img src="babymetal3.jpg" alt="" />
                 <div>
-                  <p>Lorem Ipsum dolor sit</p>
+                  <p>Identidade Visual</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                  lobortis dui vel urna sodales, sed iaculis nibh mollis. Integer
-                  euismod diam tellus, quis rhoncus nulla suscipit semper.
+                  O BABYMETAL combina elementos da cultura japonesa tradicional com uma estética futurista e sombria. As roupas de palco misturam vestidos góticos, armaduras samurais e detalhes brilhantes, criando um visual icônico.
+
+A banda também tem uma mitologia própria, baseada na figura do Fox God (Deus Raposa), uma entidade fictícia que guia suas carreiras e aventuras musicais. Esse conceito ajuda a construir um universo místico ao redor do grupo, fortalecendo a conexão com os fãs.
                 </p>
                 </div>
               </div>
@@ -106,12 +97,11 @@
           </section>
         </main>
         <section class="contato">
-          <h3>Lorem Ipsum Dolor Sit Amet<br />consectetur adipiscing elit.</h3>
+          <h3>Dúvida ou sujestão ^^</h3>
           <form action="">
             <input type="text" />
             <input type="submit" value="Ok" />
-            <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-              lobortis dui vel urna sodales, sed iaculis nibh mollis.</small>
+            <small>ou (27)xxxxx-xxxx</small>
           </form>
         </section>
         <footer>
