--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2>BABYMETAL</h2>
             <div>
               <div class="grid__item">
-                <img src="floresh.avif/200/230" alt="" />
+                <img src="babymetal4.jpg" alt="Momometal, sumetal e moametal" />
                 <p>DESTAQUE</p>
                 <p>
                   O BABYMETAL se destacou não apenas pela originalidade de seu som, mas também pela forma como desafia as convenções do metal, unindo dois mundos aparentemente opostos e conquistando tanto fãs de J-pop quanto headbangers tradicionais.<br>
@@ -97,7 +97,7 @@ A banda também tem uma mitologia própria, baseada na figura do Fox God (Deus R
           </section>
         </main>
         <section class="contato">
-          <h3>Dúvida ou sujestão ^^</h3>
+          <h3>Dúvida ou sugestão ^^</h3>
           <form action="">
             <input type="text" />
             <input type="submit" value="Ok" />
